D&D3.5 Spacing fixes, color/error fixes etc
Reverted old pull due to an issue/mistake; This commit has fixes to
solve the spacing/alignment issue previously seen in Chrome, reverts the
colorizing of the skill rank box at zero ranks for trained only skills
(and thus solves the error it produced), fixes the appraise macro issue,
etc.

--- a/D&D_3-5/charsheet_3-5.css
+++ b/D&D_3-5/charsheet_3-5.css
@@ -148,149 +148,149 @@ select.sheet-dtype {
 }
 
 .sheet-statlabel-weapons {
-    display:table-cell;
+    display: table-cell;
     border: 1px solid white;
     background-color: black;
     color: white;
     font-size: 0.7em;
-    vertical-align:bottom;
+    vertical-align: bottom;
 }
 
 .sheet-table-name {
-    display:table-caption;
-    text-align:center;
-    font-weight:bold;
-    color:white;
-    background-color:black;
-    width:100%;
+    display: table-caption;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    background-color: black;
+    width: 100%;
 }
 
 .sheet-table-header {
-    display:table-cell;
-    text-align:center;
-    font-weight:bold;
-    vertical-align:bottom;
+    display: table-cell;
+    text-align: center;
+    font-weight: bold;
+    vertical-align: bottom;
 }
 
 .sheet-table-header-left {
-    display:table-cell;
-    text-align:left;
-    font-weight:bold;
+    display: table-cell;
+    text-align: left;
+    font-weight: bold;
 }
 
 .sheet-table-header2-left {
-    display:table-cell;
-    text-align:left;
-    font-weight:bold;
+    display: table-cell;
+    text-align: left;
+    font-weight: bold;
     font-size: 0.7em;
 }
 
 .sheet-table-header-right {
-    display:table-cell;
-    text-align:right;
-    font-weight:bold;
+    display: table-cell;
+    text-align: right;
+    font-weight: bold;
 }
 
 .sheet-table-header2 {
-    display:table-cell;
-    text-align:center;
-    font-weight:bold;
+    display: table-cell;
+    text-align: center;
+    font-weight: bold;
     font-size: 0.7em;
-    vertical-align:bottom;
+    vertical-align: bottom;
 }
 
 .sheet-table-header3 {
-    display:table-cell;
-    text-align:center;
-    font-weight:bold;
+    display: table-cell;
+    text-align: center;
+    font-weight: bold;
     font-size: 0.7em;
-    vertical-align:top;
+    vertical-align: top;
 }
 
 .sheet-table-encumbrance {
-    display:table-cell;
+    display: table-cell;
 	font-size: 0.65em; 
 	width: 126px;
 }
 
 .sheet-table-load {
-    display:table-cell;
+    display: table-cell;
 	font-size: 0.65em; 
 	width: 95px;
 }
 
 .sheet-table-left {
-    display:table-cell;
-    text-align:left;
+    display: table-cell;
+    text-align: left;
 }
 
 .sheet-table-right {
-    display:table-cell;
-    text-align:right;
+    display: table-cell;
+    text-align: right;
 }
 
 .sheet-table-center {
-    margin-left:auto; 
-    margin-right:auto;
+    margin-left: auto; 
+    margin-right: auto;
 }
 
 .sheet-table-data-left {
-    display:table-cell;
-    text-align:left;
-    vertical-align:top;
+    display: table-cell;
+    text-align: left;
+    vertical-align: top;
 }
 
 .sheet-table-data-right {
-    display:table-cell;
-    text-align:right;
-    vertical-align:top;
+    display: table-cell;
+    text-align: right;
+    vertical-align: top;
 }
 
 .sheet-table-data-center {
-    display:table-cell;
-    text-align:center;
-    vertical-align:top;
+    display: table-cell;
+    text-align: center;
+    vertical-align: top;
 }
 
 .sheet-table-data-center-sm {
-    display:table-cell;
-    text-align:center;
+    display: table-cell;
+    text-align: center;
     font-size: 0.7em;
-    vertical-align:top;
+    vertical-align: top;
 }
 
 .sheet-table-data-center-skills {
-    display:table-cell;
+    display: table-cell;
     width: 28px;
 }
 
 .sheet-table-data-center-skills-rep {
-    display:table-cell;
+    display: table-cell;
     width: 31px;
 }
 
 .sheet-table-col {
-    display:table-col;
-    vertical-align:center;
-    width:100%;
+    display: table-col;
+    vertical-align: center;
+    width: 100%;
 }
 
 .sheet-table-row {
-    display:table-row;
-    vertical-align:top;
-    width:100%;
+    display: table-row;
+    vertical-align: top;
+    width: 100%;
 }
 
 .sheet-table-row-name {
-    display:table-cell;
-    text-align:center;
-    color:white;
-    background-color:black;
-    font-weight:bold;
+    display: table-cell;
+    text-align: center;
+    color: white;
+    background-color: black;
+    font-weight: bold;
 }
 
 .sheet-table-row-small {
-    display:table-cell;
+    display: table-cell;
     width: 40px; 
 }
 
@@ -298,16 +298,6 @@ textarea { height: auto; }
 
 input, select {
     width:100%;
-}
-
-/*Adding styling to number fields with range. For untrained skills.*/
-input:in-range {
-    background-color: transparent;
-}
-input:out-of-range {
-    background-color: rgba(255, 0, 0, 0.05);
-    color: red;
-	/* text-decoration: line-through; */
 }
 
 /* Take out the spinner arrows on number inputs. */
